# src/organization2/swagger/swagger.yml
@@ -134,6 +134,35 @@ paths:
             $ref: '#/definitions/members'
         "403":
           description: unitId page size is empty
+  /unit/unit-by-page:
+    get:
+      tags:
+      - unit
+      description: get unit page
+      operationId: UnitController.get unit  by page
+      parameters:
+      - in: query
+        name: page
+        description: parameter require
+        required: true
+        type: string
+      - in: query
+        name: size
+        description: parameter require
+        required: true
+        type: string
+      - in: query
+        name: type
+        description: parameter require
+        required: true
+        type: string
+      responses:
+        "200":
+          description: ""
+          schema:
+            $ref: '#/definitions/members'
+        "403":
+          description: page size type is empty
   /user/:
     post:
       tags:
